Cleaning up stuff

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -21,7 +21,8 @@
     "from keras.datasets import mnist\n",
     "from keras import backend as k\n",
     "from torch.utils.data import Subset\n",
-    "import model"
+    "import model\n",
+    "import partition"
    ]
   },
   {
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,38 +103,16 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Custom dataset class that wraps x_train and y_train\n",
-    "class MNISTDataset(Dataset):\n",
-    "    def __init__(self, data, targets):\n",
-    "        # data: the images (flattened or original, depending on your requirement)\n",
-    "        # targets: the labels (e.g., the digit for each image)\n",
-    "        self.data = data\n",
-    "        self.targets = targets\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        # Return the number of samples in the dataset\n",
-    "        return len(self.data)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        # Returns a single sample and its corresponding label\n",
-    "        return self.data[idx], self.targets[idx]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = MNISTDataset(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Help Function"
+    "\n",
+    "train_dataset = partition.MNISTDataset(x_train, y_train)"
    ]
   },
   {
@@ -141,71 +120,7 @@
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def balanced_dirichlet_partition(dataset, partitions_number=10, alpha=0.5, seed=42):\n",
-    "    \"\"\"\n",
-    "    Partition the dataset into multiple subsets using a Dirichlet distribution,\n",
-    "    ensuring that each partition contains samples from every class.\n",
-    "\n",
-    "    Args:\n",
-    "        dataset (torch.utils.data.Dataset): The dataset to partition. It should have 'data' and 'targets' attributes.\n",
-    "        partitions_number (int): Number of partitions to create.\n",
-    "        alpha (float): The concentration parameter of the Dirichlet distribution. A lower alpha value leads to more imbalanced partitions.\n",
-    "        seed (int): Random seed for reproducibility.\n",
-    "\n",
-    "    Returns:\n",
-    "        dict: A dictionary where keys are partition indices (0 to partitions_number-1)\n",
-    "              and values are lists of indices corresponding to the samples in each partition.\n",
-    "    \"\"\"\n",
-    "    np.random.seed(seed)\n",
-    "    \n",
-    "    # Extract targets (labels) from the dataset\n",
-    "    y_train = dataset.targets\n",
-    "    \n",
-    "    # Number of classes in the dataset\n",
-    "    num_classes = len(np.unique(y_train))\n",
-    "    \n",
-    "    # Initialize the map that will store the indices for each partition\n",
-    "    net_dataidx_map = {}\n",
-    "    \n",
-    "    # Initialize lists to store the indices for each class\n",
-    "    class_indices = {k: np.where(y_train == k)[0] for k in range(num_classes)}\n",
-    "    \n",
-    "    # Shuffle the indices within each class to ensure random distribution\n",
-    "    for k in class_indices.keys():\n",
-    "        np.random.shuffle(class_indices[k])\n",
-    "    \n",
-    "    # Ensure that each partition gets at least one sample from each class\n",
-    "    min_size = 10  # Ensuring each class has at least 10 samples in each partition\n",
-    "    idx_batch = [[] for _ in range(partitions_number)]\n",
-    "\n",
-    "    # Assign at least `min_size` samples from each class to every partition\n",
-    "    for k in range(num_classes):\n",
-    "        # Split the class indices equally across the partitions\n",
-    "        split = np.array_split(class_indices[k], partitions_number)\n",
-    "        for i in range(partitions_number):\n",
-    "            idx_batch[i].extend(split[i][:min_size])\n",
-    "\n",
-    "        # Remove the samples that were assigned equally\n",
-    "        class_indices[k] = class_indices[k][min_size*partitions_number:]\n",
-    "\n",
-    "    # Now distribute the remaining samples using the Dirichlet distribution\n",
-    "    for k in range(num_classes):\n",
-    "        remaining_indices = class_indices[k]\n",
-    "        proportions = np.random.dirichlet(np.repeat(alpha, partitions_number))\n",
-    "        proportions = (np.cumsum(proportions) * len(remaining_indices)).astype(int)[:-1]\n",
-    "        split_remaining = np.split(remaining_indices, proportions)\n",
-    "        \n",
-    "        for i in range(partitions_number):\n",
-    "            idx_batch[i].extend(split_remaining[i])\n",
-    "\n",
-    "    # Shuffle the indices within each partition\n",
-    "    for i in range(partitions_number):\n",
-    "        np.random.shuffle(idx_batch[i])\n",
-    "        net_dataidx_map[i] = idx_batch[i]\n",
-    "\n",
-    "    return net_dataidx_map\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -216,19 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Partition \n",
     "\n",
-    "partitioned_data = balanced_dirichlet_partition(train_dataset, partitions_number=10, alpha=0.5)\n",
+    "partitioned_data = partition.balanced_dirichlet_partition(train_dataset, partitions_number=10, alpha=0.5)\n",
     "partition_0_dataset = Subset(train_dataset, partitioned_data[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -257,39 +172,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_train1 shape: (8115, 28, 28, 1)\n",
-      "y_train1 shape: (8115,)\n"
+      "x_train shape: (8115, 28, 28, 1)\n",
+      "y_train shape: (8115,)\n"
      ]
     }
    ],
    "source": [
     "# Reformatting Subsets, loop for all\n",
     "\n",
-    "x_train1 = []\n",
-    "y_train1 = []\n",
-    "\n",
-    "for img, label in partition_0_dataset:\n",
-    "    x_train1.append(img)\n",
-    "    y_train1.append(label)\n",
-    "\n",
-    "x_train1 = np.array(x_train1)\n",
-    "y_train1 = np.array(y_train1)\n",
-    "\n",
-    "# Check shapes to confirm they match the original structure\n",
-    "print(\"x_train1 shape:\", x_train1.shape)  # Should match the shape (num_samples, 784) if flattened\n",
-    "print(\"y_train1 shape:\", y_train1.shape)  # Should match the shape (num_samples,)"
+    "x_train1, y_train1 = partition.reformat_dataset(partition_0_dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,12 +219,12 @@
     "\n",
     "y_train = keras.utils.to_categorical(y_train)\n",
     "\n",
-    "# y_train1 = keras.utils.to_categorical(y_train1)\n"
+    "y_train1 = keras.utils.to_categorical(y_train1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +263,9 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/12\n",
-      "\u001b[1m577/938\u001b[0m \u001b[32m━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━\u001b[0m \u001b[1m8s\u001b[0m 24ms/step - accuracy: 0.1239 - loss: 2.5392"
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 25ms/step - accuracy: 0.1004 - loss: 2.5246\n",
+      "Epoch 2/12\n",
+      "\u001b[1m659/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━\u001b[0m \u001b[1m6s\u001b[0m 25ms/step - accuracy: 0.0968 - loss: 2.4220"
      ]
     },
     {
@@ -370,8 +275,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model_1\u001b[38;5;241m.\u001b[39mtrain_model()\n",
-      "File \u001b[1;32mc:\\Users\\micha\\Downloads\\Federated-Dimensionality-Reduction\\model.py:37\u001b[0m, in \u001b[0;36mModelBuilder.train_model\u001b[1;34m(self, epochs, batch_size)\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     35\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe model has not been built yet. Call build_model() first.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 37\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mfit(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mx_train, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39my_train, epochs\u001b[38;5;241m=\u001b[39mepochs, batch_size\u001b[38;5;241m=\u001b[39mbatch_size)\n",
+      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model_1\u001b[38;5;241m.\u001b[39mtrain_model()\n",
+      "File \u001b[1;32mc:\\Users\\micha\\Downloads\\Federated-Dimensionality-Reduction\\model.py:38\u001b[0m, in \u001b[0;36mClassificationModel.train_model\u001b[1;34m(self, epochs, batch_size)\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe model has not been built yet. Call build_model() first.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 38\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mfit(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mx_train, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39my_train, epochs\u001b[38;5;241m=\u001b[39mepochs, batch_size\u001b[38;5;241m=\u001b[39mbatch_size)\n",
       "File \u001b[1;32mc:\\Users\\micha\\anaconda3\\Lib\\site-packages\\keras\\src\\utils\\traceback_utils.py:117\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    115\u001b[0m filtered_tb \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    116\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 117\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    118\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    119\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n",
       "File \u001b[1;32mc:\\Users\\micha\\anaconda3\\Lib\\site-packages\\keras\\src\\backend\\tensorflow\\trainer.py:320\u001b[0m, in \u001b[0;36mTensorFlowTrainer.fit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_batch_size, validation_freq)\u001b[0m\n\u001b[0;32m    318\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m step, iterator \u001b[38;5;129;01min\u001b[39;00m epoch_iterator\u001b[38;5;241m.\u001b[39menumerate_epoch():\n\u001b[0;32m    319\u001b[0m     callbacks\u001b[38;5;241m.\u001b[39mon_train_batch_begin(step)\n\u001b[1;32m--> 320\u001b[0m     logs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtrain_function(iterator)\n\u001b[0;32m    321\u001b[0m     logs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pythonify_logs(logs)\n\u001b[0;32m    322\u001b[0m     callbacks\u001b[38;5;241m.\u001b[39mon_train_batch_end(step, logs)\n",
       "File \u001b[1;32mc:\\Users\\micha\\anaconda3\\Lib\\site-packages\\tensorflow\\python\\util\\traceback_utils.py:150\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    148\u001b[0m filtered_tb \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    149\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 150\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n",
@@ -390,6 +295,13 @@
    "source": [
     "model_1.train_model()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
