cifar model in test.ipynb

--- a/cifar_full.ipynb
+++ b/cifar_full.ipynb
@@ -20,7 +20,7 @@
     "import partition\n",
     "from pca import PCADigitReducer\n",
     "from autoencoder import reduce_dimensions\n",
-    "from training import train,test,train_resnet,test_resnet\n",
+    "from training import train,test,train_resnet,test_resnet,train_fashion\n",
     "from federated_learning import distribute_global_model, federated_averaging\n",
     "from torchvision.models import resnet18\n",
     "from torchvision.models import mobilenet_v2\n",
