--- a/credit_card.ipynb
+++ b/credit_card.ipynb
@@ -2514,7 +2514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2534,24 +2534,21 @@
     "all_labels = []\n",
     "\n",
     "with torch.no_grad():\n",
-    "    for X_batch, y_batch in test_loader_pca:  # Use correct PCA-transformed test set\n",
+    "    for X_batch, y_batch in test_loader_pca:  \n",
     "        y_pred = model_pca(X_batch)\n",
-    "        predicted = (y_pred > 0.5).float()  # Convert probabilities to binary values (0 or 1)\n",
+    "        predicted = (y_pred > 0.5).float()  \n",
     "        \n",
-    "        all_preds.extend(predicted.cpu().numpy())  # Store predictions\n",
-    "        all_labels.extend(y_batch.cpu().numpy())  # Store actual labels\n",
+    "        all_preds.extend(predicted.cpu().numpy())  \n",
+    "        all_labels.extend(y_batch.cpu().numpy())  \n",
     "\n",
-    "# Convert lists to numpy arrays\n",
     "all_preds = np.array(all_preds).flatten()\n",
     "all_labels = np.array(all_labels).flatten()\n",
     "\n",
-    "# Compute evaluation metrics\n",
     "accuracy = accuracy_score(all_labels, all_preds)\n",
     "precision = precision_score(all_labels, all_preds, zero_division=1)\n",
     "recall = recall_score(all_labels, all_preds, zero_division=1)\n",
     "f1 = f1_score(all_labels, all_preds, zero_division=1)\n",
     "\n",
-    "# Print results\n",
     "print(f\"Test Accuracy: {accuracy:.4f}\")\n",
     "print(f\"Precision: {precision:.4f}\")\n",
     "print(f\"Recall: {recall:.4f}\")\n",
