--- a/fashionmnist2.ipynb
+++ b/fashionmnist2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "from training import train,test, train_fashion,test_fashion\n",
     "from federated_learning import distribute_global_model, federated_averaging\n",
     "from model4 import MultilayerPerceptron\n",
-    "import cluster"
+    "import cluster\n",
+    "from autoencoder2 import Autoencoder2"
    ]
   },
   {
@@ -208,6 +209,13 @@
     "reconstructed_dataset = CustomTensorDataset(reconstructed_images.cpu(), labels)  \n",
     "reduced_train_loader_auto = DataLoader(reconstructed_dataset, batch_size=batch_size_train, shuffle=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
