mnist alphas final

--- a/credit_card.ipynb
+++ b/credit_card.ipynb
@@ -2560,7 +2560,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# way too imbalanced (as expected). need different metrics in order to measure. as of right now, the model only predicts one thing"
+   ]
   }
  ],
  "metadata": {
