fashionmnist alphas not finished

--- a/fashionmnist_all_alpha.ipynb
+++ b/fashionmnist_all_alpha.ipynb
@@ -25,6 +25,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PCA\n",
+    "#trainingset_pca = train_loader_reduced_pca.dataset\n",
+    "trial_model_pca = classification_model()\n",
+    "global_model_pca = classification_model() \n",
+    "trainingset_pca = train_loader_pca.dataset"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
