--- a/plot.ipynb
+++ b/plot.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
     "        plt.title(f'{title} - Alpha vs {metric}')\n",
     "        plt.legend()\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(filename)\n",
+    "    #plt.savefig(filename)\n",
     "    plt.show()\n",
     "\n",
     "def compare_datasets(dataset_results, dataset_names, filename):\n",
@@ -209,7 +209,7 @@
     "        plt.title(f'Comparison - Alpha vs {metric}')\n",
     "        plt.legend()\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(filename)\n",
+    "    #plt.savefig(filename)\n",
     "    plt.show()\n",
     "\n",
     "# Example Usage\n",
