--- a/mnist_cluster_final copy.ipynb
+++ b/mnist_cluster_final copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x182df70ddb0>"
+       "<torch._C.Generator at 0x21c50602eb0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,18 +135,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/5], Loss: 0.1125\n",
-      "Epoch [2/5], Loss: 0.0847\n",
-      "Epoch [3/5], Loss: 0.0805\n",
-      "Epoch [4/5], Loss: 0.0782\n",
-      "Epoch [5/5], Loss: 0.0768\n"
+      "Epoch [1/5], Loss: 0.1125\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m outputs \u001b[38;5;241m=\u001b[39m autoencoder2(images)\n\u001b[0;32m     11\u001b[0m loss \u001b[38;5;241m=\u001b[39m auto2_criterion(outputs, images) \n\u001b[1;32m---> 13\u001b[0m loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[0;32m     14\u001b[0m auto2_optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[0;32m     16\u001b[0m train_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m loss\u001b[38;5;241m.\u001b[39mitem()\n",
+      "File \u001b[1;32mc:\\Users\\nazek\\anaconda3\\Lib\\site-packages\\torch\\_tensor.py:581\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    571\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    572\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    573\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[0;32m    574\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    579\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[0;32m    580\u001b[0m     )\n\u001b[1;32m--> 581\u001b[0m torch\u001b[38;5;241m.\u001b[39mautograd\u001b[38;5;241m.\u001b[39mbackward(\n\u001b[0;32m    582\u001b[0m     \u001b[38;5;28mself\u001b[39m, gradient, retain_graph, create_graph, inputs\u001b[38;5;241m=\u001b[39minputs\n\u001b[0;32m    583\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\nazek\\anaconda3\\Lib\\site-packages\\torch\\autograd\\__init__.py:347\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    342\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[0;32m    344\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[0;32m    345\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    346\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 347\u001b[0m _engine_run_backward(\n\u001b[0;32m    348\u001b[0m     tensors,\n\u001b[0;32m    349\u001b[0m     grad_tensors_,\n\u001b[0;32m    350\u001b[0m     retain_graph,\n\u001b[0;32m    351\u001b[0m     create_graph,\n\u001b[0;32m    352\u001b[0m     inputs,\n\u001b[0;32m    353\u001b[0m     allow_unreachable\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m    354\u001b[0m     accumulate_grad\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m    355\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\nazek\\anaconda3\\Lib\\site-packages\\torch\\autograd\\graph.py:825\u001b[0m, in \u001b[0;36m_engine_run_backward\u001b[1;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[0;32m    823\u001b[0m     unregister_hooks \u001b[38;5;241m=\u001b[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[0;32m    824\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 825\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Variable\u001b[38;5;241m.\u001b[39m_execution_engine\u001b[38;5;241m.\u001b[39mrun_backward(  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[0;32m    826\u001b[0m         t_outputs, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs\n\u001b[0;32m    827\u001b[0m     )  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[0;32m    828\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    829\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52272,7 +52282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52333,7 +52343,7 @@
        ")"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -52360,19 +52370,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "partitioned_data_auto = partition.balanced_dirichlet_partition(trainingset_auto, partitions_number=num_clients, alpha=0.1)\n",
     "\n",
@@ -52562,15 +52560,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final Results (Non-Clustered): {'classic': {}, 'pca': {}, 'autoencoder': {'NoCluster': {'losses': [0.08878104782104493], 'accuracy': [97.2], 'precision': [0.9718793265539263], 'recall': [0.9719804845053612], 'f1': [0.9718887983444822], 'trainingTime': [178.18732500076294]}}}\n",
-      "Final Results (Clustered): {'classic': {}, 'pca': {}, 'autoencoder': {2: {'losses': [0.07136679611206055, 0.06136421432495117, 0.05513326873779297, 0.05201905899047852], 'accuracy': [97.69, 98.03, 98.17, 98.27], 'precision': [0.976841204713496, 0.9802959110769823, 0.9816658229118413, 0.9826801499936868], 'recall': [0.9768340879579174, 0.9803244050256124, 0.9817130841383553, 0.9827771196881571], 'f1': [0.9767946530185825, 0.980275089282204, 0.9816482412731127, 0.9826799514005005], 'trainingTime': [69.5360062122345, 68.6651508808136, 68.08172130584717, 68.15843558311462]}, 4: {'losses': [0.047834548568725585, 0.04622954216003418, 0.04444165744781494, 0.043289639854431156], 'accuracy': [98.44, 98.53, 98.6, 98.59], 'precision': [0.9843162348871948, 0.9852548351533839, 0.9859419624443196, 0.9858296390022308], 'recall': [0.9843762326049124, 0.9852608583629715, 0.9859600670563399, 0.9858596018910069], 'f1': [0.9843227763534086, 0.9852424705592892, 0.9859324151424411, 0.9858289852054721], 'trainingTime': [68.15612936019897, 68.17081236839294, 68.10459113121033, 68.02183866500854]}, 6: {'losses': [0.04139673194885254, 0.0405659423828125, 0.03980033950805664, 0.04010178852081299], 'accuracy': [98.7, 98.69, 98.74, 98.74], 'precision': [0.9869260978058829, 0.9868279550803578, 0.9873328354732103, 0.9873076154682661], 'recall': [0.9870234017380184, 0.9868705151285952, 0.9873602295016719, 0.9874116846839918], 'f1': [0.9869596944326007, 0.9868358205647905, 0.987336289399026, 0.9873465913417494], 'trainingTime': [69.3339319229126, 71.15048813819885, 71.04662466049194, 70.77991724014282]}, 8: {'losses': [0.0395399227142334, 0.03911107120513916, 0.038977632331848144, 0.03829846420288086], 'accuracy': [98.73, 98.73, 98.73, 98.72], 'precision': [0.9872113805964441, 0.9871903495269967, 0.9872296459337416, 0.9871157707483322], 'recall': [0.9872536246761848, 0.9872542872603942, 0.9872516062789491, 0.9871572419013429], 'f1': [0.9872163815066243, 0.987207957089789, 0.9872246906406538, 0.9871216621513348], 'trainingTime': [71.5871217250824, 71.67779064178467, 71.47177767753601, 71.4891288280487]}, 10: {'losses': [0.038340018844604494, 0.03868247909545899, 0.03774585113525391, 0.03699915580749512], 'accuracy': [98.69, 98.75, 98.76, 98.75], 'precision': [0.9868231392958237, 0.987382708595012, 0.9875232877590726, 0.9874367352900444], 'recall': [0.9869129338178789, 0.9875468823837654, 0.9876135863219091, 0.9874827952863748], 'f1': [0.9868514641839639, 0.9874456670872747, 0.9875506548619442, 0.9874452301685013], 'trainingTime': [71.77292466163635, 71.95758533477783, 71.6460063457489, 71.91209387779236]}}}\n"
+     "ename": "NameError",
+     "evalue": "name 'results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFinal Results (Non-Clustered):\u001b[39m\u001b[38;5;124m\"\u001b[39m, results)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFinal Results (Clustered):\u001b[39m\u001b[38;5;124m\"\u001b[39m, clusteredResults)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'results' is not defined"
      ]
     }
    ],
